js和Kotlin交互邏輯添加

--- a/composeApp/src/jsMain/resources/index.html
+++ b/composeApp/src/jsMain/resources/index.html
@@ -17,6 +17,12 @@
 </head>
 <body>
 <canvas id="ComposeTarget" width="1" height="1"></canvas>
-<script src="composeApp.js"></script>
+<script  src="composeApp.js"></script>
+<script>
+    function appResponse(s){
+       console.log("appResponse", s)
+       console.log(composeApp.org.example.project.mult.httpCall(s))
+    }
+</script>
 </body>
 </html>
